Create implementation SESMailProvider

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,15 @@
+# Aplication
 APP_SECRET=
 APP_WEB_URL=http://localhost:3000
 APP_API_URL=http://localhost:3333
+
+# Mail Driver (ethereal | ses)
+MAIL_DRIVER=ethereal
+
+# AWS SES Crendentials
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
+
+AWS_FROM_EMAIL=
+AWS_FROM_NAME=
